# revanced-app-metadata-api

./: Dockerfile  README.md  app.py  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  run.py
api/controllers/: search.py
api/models/: search.py
app/: app.py
app/controllers/: search.py
app/interfaces/: Engine.py
app/middlewares/: headers.py
app/utils/: funcs.py
