[tool.poetry]
name = "revanced-app-metadata-api"
version = "1.0.0"
description = "Return relevant metadata for a given Android app package ID"
authors = ["Alexandre Teles <alexandre.teles@ufba.br>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
httpx = {extras = ["brotli", "http2"], version = "^0.26.0"}
loguru = "^0.7.2"
uvloop = "^0.19.0"
httpx-auth = "^0.19.0"
orjson = "^3.9.12"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
fastapi-limiter = "^0.1.6"
cashews = {extras = ["dill", "redis", "speedup"], version = "^7.0.0"}
gunicorn = "^21.2.0"
cytoolz = "^0.12.3"
brotli-asgi = "^1.4.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
types-redis = "^4.6.0.20240106"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
